-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Internal Code
-
None
-
Fully Compatible
-
ALL
-
Service Arch 2019-03-11
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The `ExtraErrorInfo` framework doesn't support declaring error codes whose extra info class is under a namespace.
For example, this error info declaration:
error_code("AsyncExecutorShutDown", 280, extra="AsyncExecutorShutDownExceptionInfo")
Generates the following declaration in error_codes.h, which fails to compile:
// ErrorExtraInfo subclasses: ... class txn::AsyncExecutorShutDownExceptionInfo;