SERVER-39688 Support namespaces for ErrorExtraInfo

Adds support for ErrorExtraInfo types that are not directly in the mongo
namespace.  I.e. something like mongo::nested::namespace::MyExtraInfo