src/mongo/base/status_test.cpp
@@ -319,5 +319,23 @@ TEST(ErrorExtraInfo, StatusParserWorks) {
     ASSERT_EQ(status.extraInfo<ErrorExtraInfoExample>()->data, 123);
 }
 
+TEST(ErrorExtraInfo, StatusParserWorksNested) {
+    nested::twice::NestedErrorExtraInfoExample::EnableParserForTest whenInScope;
+    auto status = Status(
+        ErrorCodes::ForTestingErrorExtraInfoWithExtraInfoInNamespace, "", fromjson("{data: 123}"));
+    ASSERT_EQ(status, ErrorCodes::ForTestingErrorExtraInfoWithExtraInfoInNamespace);
+    ASSERT(status.extraInfo());
+    ASSERT(status.extraInfo<nested::twice::NestedErrorExtraInfoExample>());
+    ASSERT_EQ(status.extraInfo<nested::twice::NestedErrorExtraInfoExample>()->data, 123);
+}
+
+TEST(ErrorExtraInfo, StatusWhenParserThrowsNested) {
+    auto status = Status(
+        ErrorCodes::ForTestingErrorExtraInfoWithExtraInfoInNamespace, "", fromjson("{data: 123}"));
+    ASSERT_EQ(status, ErrorCodes::duplicateCodeForTest(51100));
+    ASSERT(!status.extraInfo());
+    ASSERT(!status.extraInfo<nested::twice::NestedErrorExtraInfoExample>());
+}
+
 }  // namespace
 }  // namespace mongo
